--- a/index.html
+++ b/index.html
@@ -12,22 +12,117 @@
     </nav>
     <main>
         <h2>Vacation Contest Sign-Up Form</h2>
-        <form> <!-- TODO: Set Action and Method Properties -->
+        <form method="GET" action="results.html">
             <div>
                 <label for="firstname">Your First Name</label>
                 <input type="text" id="firstname" name="firstname">
-                <!-- TODO: Create a "lastname" input with type "text" -->
+                <label for="lastname">Your Last Name</label>
+                <input type="text" id="lastname" name="lastname">
             </div>
-            <!-- TODO: Make fieldset and legend -->
-            <!-- Todo: Email Input -->
-            <!-- Todo: Street Address Input -->
-            <!-- Todo: City, State, and Zip Inputs -->
+            <fieldset>
+                <legend>Your Contact Info</legend>
+                <label for="email">Your Email</label>
+                <input type="text" id="email" name="email">
+                <label for="address">Your Address</label>
+                <input type="text" id="address" name="address">
+                <label for="city">City</label>
+                <input type="text" id="text" name="city">
+                <label for="state">State</label>
+                <input name="state" list="state-list">
+                <datalist id="state-list"> 
+                    <option value="AL">Alabama</option>
+                    <option value="AK">Alaska</option>
+                    <option value="AZ">Arizona</option>
+                    <option value="AR">Arkansas</option>
+                    <option value="CA">California</option>
+                    <option value="CT">Connecticut</option>
+                    <option value="CO">Colorado</option>
+                    <option value="DE">Delaware</option>
+                    <option value="FL">Florida</option>
+                    <option value="GA">Georgia</option>
+                    <option value="HI">Hawaii</option>
+                    <option value="IA">Iowa</option>
+                    <option value="ID">Idaho</option>
+                    <option value="IL">Illinois</option>
+                    <option value="IN">Indiana</option>
+                    <option value="KY">Kentucky</option>
+                    <option value="LA">Louisiana</option>
+                    <option value="MA">Massachussets</option>
+                    <option value="MD">Maryland</option>
+                    <option value="ME">Maine</option>
+                    <option value="MI">Michigan</option>
+                    <option value="MN">Minnesota</option>
+                    <option value="MO">Missouri</option>
+                    <option value="MS">Mississippi</option>
+                    <option value="MT">Montana</option>
+                    <option value="NC">North Carolina</option>
+                    <option value="ND">North Dakota</option>
+                    <option value="NE">Nebraska</option>
+                    <option value="NH">New Hampshire</option>
+                    <option value="NJ">New Jersey</option>
+                    <option value="NM">New Mexico</option>
+                    <option value="NV">Nevada</option>
+                    <option value="NY">New York</option>
+                    <option value="OH">Ohio</option>
+                    <option value="OK">Oklahoma</option>
+                    <option value="OR">Oregon</option>
+                    <option value="PA">Pennsylvania</option>
+                    <option value="RI">Rhode Island</option>
+                    <option value="SC">South Carolina</option>
+                    <option value="SD">South Dakota</option>
+                    <option value="TN">Tennessee</option>
+                    <option value="TX">Texas</option>
+                    <option value="UT">Utah</option>
+                    <option value="VA">Virginia</option>
+                    <option value="VT">Vermont</option>
+                    <option value="WA">Washington</option>
+                    <option value="WI">Wisconsin</option>
+                    <option value="WV">West Virginia</option>
+                    <option value="WY">Wyoming</option>
+                </datalist>
+                <label for="zip">Zip Code</label>
+                <input name="zip" id="zip" type="text">
+            </fieldset>
+            <fieldset>
+                <legend>Your Preferences</legend>
+                <h3>Choose Your Prefered Location!</h3>
+                <div>
+                    <label for="aruba">Aruba</label>
+                    <input type="radio" id="aruba" name="location" value="Aruba">
+                </div>
+                <div>
+                    <label for="japan">Japan</label>
+                    <input type="radio" id="japan" name="location" value="Japan">
+                </div>
+                <div>
+                    <label for="reykjavik">Reykjavik</label>
+                    <input type="radio" id="reykjavik" name="location" value="Reykjavik"> 
+                </div>
+                <div>
+                    <label for="new-zealand">New Zealand</label>
+                    <input type="radio" id="new-zealand" name="location" value="New Zealand" checked>
+                </div>
+                <h3>Pick Your Favorite Color</h3>
+                <div>
+                    <label for="color">Click to Choose Your Color</label>
+                    <input type="color" id="color" name="color">
+                </div>
+                <h3>Choose Your Extras</h3>
+                <div>
+                    <label for="sauna">Sauna</label>
+                    <input type="radio" id="sauna" name="extras" value="Sauna">
+                </div>
+                <div>
+                    <label for="hot-tub">In-Room Hot Tub</label>
+                    <input type="radio" id="hot-tub" name="extras" value="Hot Tub">
+                </div>
+                <div>
+                    <label for="slide">In-Room Slide</label>
+                    <input type="radio" id="slide" name="extras" value="Slide" checked>
+                </div>
+            </fieldset>
 
-            <!-- TODO: Second fieldset -->
-            <!-- TODO: Radio buttons for selecting preferred destination -->
-            <!-- TODO: Color input for selecting favorite color -->
-            <!-- TODO: Checkboxes for selecting extra add-ons -->
-            
+            <input type="submit" value="Enter the Contest!">
             <!-- TODO: Submit Button -->
         </form>
     </main>
